fix content overflow

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -40,6 +40,10 @@ body {
   transition: left 0.2s;
 }
 
+.page-content{
+  margin-left: 240px;
+  position: relative;
+}
 
 .mdl-layout__drawer {
   min-height: 750px;
